# AtlasKafkaEventListener

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
.github/workflows/: build_docker_image.yaml
argocd/: atlas_kafka_event_listener.yaml
atlas_kafka_event_listener/: HiveEventHandler.py  KConsumer.py  KafkaConsumer.py  LogManager.py  main.py
atlas_kafka_event_listener/oidc/: JwtTokenValidator.py  OidcClient.py  OidcTokenManager.py
command/: run.sh  set_env.sh
event_parser/: hive_event_parser.py
k8s/: deployment.yaml  secrets.yaml
kafka_consumer/: consumer.py
tests/: hive_event_parsser_test.py  test_HiveEventHandler.py  test_JWTTokenValidator.py  test_OidcClient.py  test_OidcTokenManager.py
